:memo: I/O 限制的异步操作

--- a/ReadNote/CLR via C#/Ⅴ-线程处理/28-IO 限制的异步操作.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/28-IO 限制的异步操作.md
@@ -62,3 +62,31 @@ private static async Task<string> IssueClientRequestAsync(){
 
 * Task 对象通常抛出一个 AggregateException，可查询异常的 InnerExceptions 属性来查看具体异常信息。但将 await 用于 Task 时，抛出的是第一个内部异常而不是 AggregateException。
 * 如果状态机出现未处理的异常，代表异步函数的 Task 对象会因为未处理的异常而完成。正在等待该 Task 的代码会看到异常。但异步函数也可能使用了 void 返回类型，这是调用者就没办法发现未处理的异常。所以，当返回 void 的异步函数抛出未处理的异常时，编译器生成的代码将捕捉它，并使用调用者的同步上下文重新抛出它。
+
+#### 应用程序及其线程处理模型
+
+* ASP.NET 应用程序允许任何线程做它想做的任何事情。
+  * 线程池线程开始处理一个客户端请求时，可以对客户端的语言文化_(System.Globalization.CultureInfo)_ 做出假定，从而允许 Web 服务器对返回的数字、日期和时间进行该语言文化特有的格式化处理。
+  * 此外，Web 服务器还可对客户端的身份标识_(System.Security.Principal.IPrincipal)_ 做出假定，确保只能访问客户端有权访问的资源。
+
+>  线程池线程生成一个异步操作后，它可能由另一个线程池线程完成，该线程将处理异步操作的结果。代表原始客户端执行工作时，语言文化和身份标识信息需要流向新的线程池线程。这样一来，代表客户端执行的任何额外的工作才能使用客户端的语言文化和身份标识信息。
+>
+> FCL 定义了一个名为 `System.Threading.SynchronizationContext` 的基类来解决这个问题。
+
+* **System.Threading.SynchronizationContext**
+  * 它的派生对象将应用程序模型连接到它的线程处理模型。
+  * 等待一个 Task 时会获取调用线程的 SynchronizationContext 对象。
+  * 线程池线程完成 Task 后，会使用该 SynchronizationContext 对象，确保为应用程序模型使用正确的线程处理模型。
+  * 当 GUI 线程在等待一个 Task 时，await 操作符后边的代码保证在 GUI 线程上执行，使代码能更新 UI 元素。
+  * 对于 ASP.NET 应用程序，await 后面的代码保证在关联了客户端语言文化和身份标识的线程池线程上执行。
+* 对于类库开发人员来说：
+  * 由于类库代码都要求不依赖特性的应用程序模型，所以要避免因为使用 SynchronizationContext 对象而产生额外的开销。
+  * 类库开发人员要竭尽全力帮助应用程序开发人员避免死锁。
+  * 为解决这两方面的额问题，Task 和 Task\<TResult\> 类提供了一个 `ConfigureAwait()` 方法。
+* **`ConfigureAwait()`**
+  * 向方法传递 `true` 相当于根本没有调用方法。
+  * 传递 `false`，await 操作符就不查询调用线程的 SynchronizationContext 对象。当线程池线程结束 Task 时会直接完成它，await 操作符后面的代码通过线程池线程执行。
+  * 必须将 `ConfigureAwait()` 方法应用于等待的每个 Task 对象。
+    * 由于异步操作可能同步完成，而且在发生这种情况时，调用线程直接继续执行，不会返回至它的调用者。
+    * 你不知道哪个操作要求忽略 SynchronizationContext 对象，所以只能要求所有操作都忽略它。
+
