:construction: 测试字符集

--- a/ReadNote/CLR via C#/Ⅴ-线程处理/29-基元线程同步构造.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/29-基元线程同步构造.md
@@ -57,3 +57,18 @@
 * **混合构造**
   * 在没有竞争的情况下，快且不会阻塞，如果存在对构造的竞争，被操作系统内核阻塞。
 
+#### 用户模式构造
+
+* 原子性
+  * CLR 保证对以下数据类型的变量读写是原子性的：
+    * Boolean、Char、(S)Byte、(U)Int16、(U)Int32、(U)IntPtr、Single 以及引用类型。
+    * 查询其它类型时不同线程可能获取的不是相同值，这称为一次 **torn read**。
+    * 虽然对变量的原子访问可以保证读写操作一次性完成，但由于编译器和 CPU 的优化，不保证操作什么时候发生。
+    * 本章**基元用户模式构造**用于规划好这些原子性读写操作的时间。此外，这些构造还可强制对 Double、(U)Int64 类型的变量进行原子性、规划好时间的访问。
+* 有两种基元用户模式线程同步构造：
+  * **易变构造_(volatile construct)_**
+    * 在特定的时间，它在包含一个简单数据类型的变量上执行原子性的**读或写**操作。
+  * **互锁构造_(interlocked construct)_**
+    * 在特定的时间，他在包含一个简单数据类型的变量上执行原子性的**读和写**操作。
+  * 所有易变和互锁构造都要求传递对包含简单数据类型的一个变量的引用_(内存地址)_。
+
