:memo: 用户模式构造

--- a/ReadNote/CLR via C#/Ⅴ-线程处理/29-基元线程同步构造.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/29-基元线程同步构造.md
@@ -72,3 +72,67 @@
     * 在特定的时间，他在包含一个简单数据类型的变量上执行原子性的**读和写**操作。
   * 所有易变和互锁构造都要求传递对包含简单数据类型的一个变量的引用_(内存地址)_。
 
+###### 易变构造
+
+* `System.Threading.Volatile`
+  * `Volatile.Write()` 方法强迫 location 中的值在调用时写入。此外，按照编码顺序，之前的加载和存储操作必须在调用 `Volatile.Write()` 之前发生。
+  * `Volatile.Read()` 方法强迫 location 中的值在调用时读取，此外，按照编码顺序，之前的加载和存储操作必须在调用 `Volatile.Read()` 之后发生。
+  * **当线程通过共享内存相互通信时，调用 `Volation.Write` 来写入最后一个值，调用 `Volation.Read()` 来读取第一个值。** 
+* C# 对易变字段的支持
+  * C# 编译器提供了 `volatile` 关键字，它可应用于：
+    * 可用于一下任何类型的静态或实例字段：
+      * `Boolean`、`(S)Byte`、`(U)Int16`、`(U)Int32`、`(U)IntPtr`、`Single`、`Char`。
+    * 引用类型的字段。
+    * 基础类型为：`(S)Byte`、`(U)Int16`、`(U)Int32`的任意枚举字段。
+  * volatile 关键字告诉 C# 和 JIT 编译器不将字段缓存到 CPU 的寄存器中，确保字段的所有读写操作都是在 RAM 中进行。
+  * C# 不支持以传引用的方式将 volatile 字段传给方法。
+
+###### 互锁构造
+
+* **`System.Threading.Interlocked`**
+  * Interlocked 类中的每个方法都执行一次原子读取以及写入操作。
+  * Interlocked  类的所有方法都建立了完成的内存栅栏_(memory fence)_：
+    * 调用某个 Interlocked 方法之前的任何变量写入都在这个 Interlocked 方法调用之前执行。
+    * 这个调用之后的任何变量读取都在这个调用之后读取。
+
+###### 实现简单的自旋锁_(spin lock)_
+
+> Interlocked 主要用于操作 Int32 值。
+>
+> 如果需要原子性的操作类对象中的一组字段，需要采取一个办法阻止所有线程，只允许其中一个进入对字段进行操作的代码区域。
+>
+> 可以使用 Interlocked 的方法构造一个线程同步块。
+
+```C#
+internal struct SimpleSpinLock{
+    private Int32 m_ResourceInUse; //0=false(默认) 1=true    
+    public void Enter(){
+        while(true){
+            if(Interlocked.Exchange(ref m_ResourceInUser, 1) == 0) return;
+            // 这里添加'黑科技'
+        }
+    }    
+    public void Leave(){
+        Interlocked.Exchange(ref m_REsourceInUser, 0);
+    }
+}
+```
+
+```C#
+public sealed class SomeResource{
+    private SimpleSpinLock m_s1 = new SimpleSpinLock();
+    public void AccessResource(){
+        m_s1.Enter();
+        // 一次只有一个线程才能进入这里访问资源...
+        m_s1.Leave();
+    }
+}
+```
+
+* “自旋”造成 CPU 的浪费。所以只应该用于保护那些会执行得非常快的代码区域。
+* Windows 有时会短时间地动态提升一个线程的优先级，因此，单 CPU 中对于正在使用自旋锁的线程，应该禁止像这样的优先级提升。
+* 超线程机器同样存在自旋锁的问题，为了解决这个问题，许多自旋锁内部都有一些额外的逻辑_(黑科技)_。
+  * FCL 提供了名为 `System.Threading.SpinWait` 的结构，它封装了关于 _黑科技_ 的最新研究成果。
+
+
+
