:memo: 实现简单的自旋锁

--- a/ReadNote/CLR via C#/Ⅴ-线程处理/29-基元线程同步构造.md
+++ b/ReadNote/CLR via C#/Ⅴ-线程处理/29-基元线程同步构造.md
@@ -130,9 +130,32 @@ public sealed class SomeResource{
 ```
 
 * “自旋”造成 CPU 的浪费。所以只应该用于保护那些会执行得非常快的代码区域。
+
 * Windows 有时会短时间地动态提升一个线程的优先级，因此，单 CPU 中对于正在使用自旋锁的线程，应该禁止像这样的优先级提升。
+
 * 超线程机器同样存在自旋锁的问题，为了解决这个问题，许多自旋锁内部都有一些额外的逻辑_(黑科技)_。
+  
   * FCL 提供了名为 `System.Threading.SpinWait` 的结构，它封装了关于 _黑科技_ 的最新研究成果。
+  
+* **_黑科技_** 旨在让希望获得资源的线程暂停执行，使当前拥有资源的线程能执行它的代码并让出资源。为此，SpinWait 结构内部调用 Thread 的静态 `Sleep()`、`Yield()` 和 `SpinWait()` 方法，
+
+  * `Thread()`
+    * 这个方法导致线程在指定时间内挂起。允许线程资源放弃它的时间片的剩余部分，系统会使线程在**大致**指定的时间里不被调度。
+    * 传递参数 System.Threading.Timeout.Infinite _(-1)_，可以告诉系统永远不调度线程，但这样做没有意义。
+    * 传递 0，告诉系统调用线程放弃了它当前时间片的剩余部分，强迫系统调用另一个线程。但系统可能重新调度该线程（如果没有相同或更高优先级的其它可调度线程）。
+  * `Yield()`
+    * 方法可以实现：线程要求 Windows 在当前 CPU 上调度另一个线程。
+    * 如果 Windows 发现有另一个线程准备好运行，Yield 就返回 true，调用 Yield 的线程会提前结束它的时间片，所选的线程得以运行一个时间片。
+    * 然后，调用 Yield 的线程被再次调度，开始用一个全新的时间片运行。
+    * 如果 Windows 没有发现其他线程准备在当前处理器上运行，Yield 就返回 false，调用 Yield 的线程继续运行它的时间片。
+    * 调用 Yield 的效果介于 Sleep(0) _(不允许较低优先级的线程运行)_ 和 Sleep(1) _(总是强迫进行上下文切换)_ 之间。
+  * `SpinWait()`
+    * 超线程CPU 一次只允许一个线程运行，在这些 CPU 上执行自旋循环时，需要强迫当前线程暂停，使 CPU 有机会切换到另一个线程并允许它运行。线程可调用 Thread  的 SpinWait 方法强迫它自身暂停，允许超线程CPU 切换到另一个线程。
+    * 调用这个方法实际会执行一个特殊的 CPU指令：它不告诉 Windows 做任何事情（因为 Windows 已经认为它在 CPU 上调度了两个线程）。
+
+  ###### Interlocked Anything 模式
+
+  
 
 
 
