:memo: 索引组织表和InnoDB逻辑存储结构

--- a/ReadNote/MySQL技术内幕-InnoDB存储引擎/表/4.3 InnoDB 行记录格式.md
+++ b/ReadNote/MySQL技术内幕-InnoDB存储引擎/表/4.3 InnoDB 行记录格式.md
@@ -114,7 +114,7 @@ SHOW CHATSET # 对应 MaxLen 的列的值。
 
 ###### 列值部分
 
-* NULL 值只占用 NULL 标志位，不占用该部分的任何空间。**
+* NULL 值只占用 NULL 标志位，不占用该部分的任何空间。
 
 * 每行记录除了用户定义的列之外，还有三个隐藏的列：
 
@@ -142,4 +142,14 @@ SHOW CHATSET # 对应 MaxLen 的列的值。
 
 #### Dynamic 和 Compressed 格式
 
-> 新的两种行记录格式对于存放在 BLOB 中的数据采用完全行溢出的方式，即连 768 个字节的数据也被移到了溢出页中，数据页（B-Tree Node）中只存放了 20 个字节的溢出页地址。同时 Compressed 行记录格式会对行数据使用 zlib 算法进行压缩，因此在存储 BLOB、TEXT、VARCHAR 这类大长度类型的数据时比较有优势。
+>   新的两种行记录格式对于存放在 BLOB 中的数据采用完全行溢出的方式，即连 768 个字节的数据也被移到了溢出页中，数据页（B-Tree Node）中只存放了 20 个字节的溢出页地址。
+>
+>   同时 Compressed 行记录格式会对行数据使用 zlib 算法进行压缩，因此在存储 BLOB、TEXT、VARCHAR 这类大长度类型的数据时比较有优势。
+
+
+
+#### CHAR 的行结构存储
+
+> 从 MySQL 4.1 开始，Char(N) 中的 N 指的是字符的长度而不是字节长度。这意味着：在**变长长度列表中会记录Char数据类型的长度**。对于没有占满长度还是填充 0x20。
+>
+> 可以认为，在多字节字符集的情况下，Char 和 Varchar 的实际行存储没有区别。
