:memo: InnoDB 存储引擎文件

--- a/ReadNote/MySQL技术内幕-InnoDB存储引擎/4 - 表/4.2 InnoDB 逻辑存储结构.md
+++ b/ReadNote/MySQL技术内幕-InnoDB存储引擎/4 - 表/4.2 InnoDB 逻辑存储结构.md
@@ -6,7 +6,7 @@
 
 * 如下图所示：
 
-![总结】MySQL技术内幕四：InnoDB表的逻辑存储及实现- 知乎](https://pic3.zhimg.com/v2-50b50d5c6b799c3d84d8bcf7942b0086_b.jpg)
+![总结】MySQL技术内幕四：InnoDB表的逻辑存储及实现- 知乎](../MySQL.assets/v2-50b50d5c6b799c3d84d8bcf7942b0086_b.jpg)
 
 
 
