--- a/ReadNote/MySQL技术内幕-InnoDB存储引擎/4 - 表/4.3 InnoDB 行记录格式.md
+++ b/ReadNote/MySQL技术内幕-InnoDB存储引擎/4 - 表/4.3 InnoDB 行记录格式.md
@@ -56,7 +56,7 @@ SHOW TABLE STATUS LIKE '[table_name]'
 >
 > 简单来说就是：一个页中存放的行数据越多，其性能越高。
 
-![Compact](https://cdn.jsdelivr.net/gh/nekolr/image-hosting@202007052146/2020/07/03/7we.png)
+![Compact](../MySQL.assets/7we.png)
 
 
 
@@ -134,7 +134,7 @@ SHOW CHATSET # 对应 MaxLen 的列的值。
 >
 >   **InnoDB 会将占用存储空间非常大的列拆开，在当前列中存储该列的前 768 个字节的数据和一个指向溢出页（Uncompressed BLOB Page 类型）的地址。**
 
-![行溢出](https://cdn.jsdelivr.net/gh/nekolr/image-hosting@202007052146/2020/07/04/bRg.png)
+![行溢出](../MySQL.assets/bRg.png)
 
 > 当一个表中只有一列，且该列的定义为：Varchat(8098) 时，正好可以存放两条记录而不会行溢出。
 
