:pencil2: developer document

--- a/Learn/Docker/常用命令.md
+++ b/Learn/Docker/常用命令.md
@@ -56,9 +56,9 @@ exit
 Ctrl + P + Q	
 
 # 删除容器
-docker rmi [container-id]
-docker rmi [container1-id] [container2-id] [container2-id]
-docker rmi -f $(docker ps -aq)
+docker rm [container-id]
+docker rm [container1-id] [container2-id] [container2-id]
+docker rm -f $(docker ps -aq)
 
 
 # 查看容器中最近的n条日志
