:pencil2: modify dockerfile

--- a/Learn/Docker/发布测试.md
+++ b/Learn/Docker/发布测试.md
@@ -7,8 +7,8 @@
 ```bash
 # /eptask/publish
 docker build -t yanwen/eptask1.0 .
-docker rm -f eptask
-docker run -dt -p 5003:80 -v log:/app/log --name eptask yanwen/eptask1.0
+docker rm -f eptask 
+docker run -dt -p 5003:80 -v log:/app/log  -v /etc/localtime:/etc/localtime --name eptask yanwen/eptask1.0
 ```
 
 #### EP前端
